# tubx

./: README.md  pyproject.toml
experiments/: 0.0 Tests.ipynb
src/tubx/: app.py  app.tcss  cli.py
src/tubx/data/: misc.py
src/tubx/ui/: instruments.py
